# VNR-Extras

./: Debug Browser.cmd  Debug Update (Mac).sh  Debug Update.cmd  Debug VNR.cmd  Kill Reader (Mac).sh  Kill Reader.cmd  Kill VNR.cmd  Readme.txt  Visual Novel Reader (Debug).cmd  Website Reader (Debug).cmd
Deploy/: Changes.txt  Readme.txt
Deploy/Caches/: Feel free to delete this folder.txt  Readme.txt
Deploy/Scripts/: Kill Python.cmd  Readme.txt  Remove VNR Profiles.cmd  Update (Debug).cmd  sublint.cmd  subx2y.cmd  subx2y.sh  tahcompile.cmd
Deployment/: Changes.txt  Readme.txt
Dictionaries/cabocharc/: ipadic.rc  unidic.rc
Dictionaries/ehnd/: UserDict_@jichi_role.txt  UserDict_@sokcuri_name.txt
Dictionaries/gaiji/: VERSION.txt
Dictionaries/hanja/: VERSION.txt
Dictionaries/opencc/: VERSION  VERSION.txt  dump_safe_jp.py
Dictionaries/pinyin/: VERSION.txt
Dictionaries/tahscript/: URL.txt  VERSION.txt  atlas.txt  lec.txt  names.txt
Examples/TAHScript/: compile.cmd  tah-macro.txt  tah-noun.txt  tah-verb.txt
Frameworks/AJAX/: env.mk
Frameworks/CaboCha/: VERSION.txt
Frameworks/Ehnd/: URL.txt
Frameworks/Ehnd/src/: .gitignore  CMakeLists.txt  Makefile
Frameworks/Ehnd/src/ehnd/: CMakeLists.txt  ReadMe.txt  config.cpp  config.h  dllmain.cpp  ehnd.cpp  ehnd.h  ehnd.vcxproj  ehnd.vcxproj.filters  ehnd_conf.ini  filter.cpp  hook.cpp  log.cpp  log.h  stdafx.h  watch.cpp  watch.h
Frameworks/LocaleSwitch/: config.ini
Frameworks/MeCab/: VERSION.txt
Frameworks/Python/: Changes.txt  VERSION.txt  qt.conf
Frameworks/Qt/: Changes.txt
Licenses/NanumBarunGothic/: URL.txt
Licenses/autoit/: URL.txt  license.htm
Licenses/boost/: URL.txt
Licenses/bottlenose/: URL.txt
Licenses/cabocha/: URL.txt
Licenses/chiitrans2/: URL.txt
Licenses/cjk-decomp/: URL.txt  licenses.txt
Licenses/cjklib/: URL.txt
Licenses/clean-3d-icons-by-mysitemyway/: LICENSE.txt  URL.txt
Licenses/coffeescript/: URL.txt
Licenses/colorama/: URL.txt
Licenses/compass/: URL.txt
Licenses/compressinja/: PKG-INFO  URL.txt
Licenses/comtypes/: URL.txt
Licenses/cygwin/: LICENSE.txt  URL.txt
Licenses/detours/: URL.txt
Licenses/dirent/: URL.txt
Licenses/eb/: URL.txt
Licenses/ebmodule/: URL.txt
Licenses/ebpocket/: URL.txt
Licenses/edrdg/: URL.txt
Licenses/ehnd/: URL.txt
Licenses/enchant/: URL.txt
Licenses/flvextract/: FLVFile.txt  URL.txt
Licenses/gcc/: URL.txt
Licenses/gsoap/: README.txt  (+2 more)
(+156 files in other folders)
